--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
+    "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^1.6.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.37.1",
